<resources>
    <string name="setting_title_ringtone">Alert Tone</string>
    <string name="setting_title_duration">Duration</string>
    <string name="connected">Connected</string>
    <string name="title_no_devices">No devices found</string>
    <string name="subtitle_no_devices">No Android Wear devices connected</string>
    <string name="x_devices_connected">%1$s devices connected</string>
    <string name="setting_title_flashlight">Flash Light</string>
    <string name="setting_title_vibrate">Vibrate</string>
    <string name="default_page_title">Searching...</string>
    <string name="default_page_subtitle">Having a look for Android Wear devices</string>
    <string name="alert_for_x">Alert for %1$s</string>
    <string name="alert_for_infinite">Dont stop ringing until found</string>

    <string name="duration_labal_ten_seconds">10 Seconds</string>
    <string name="duration_labal_thirty_seconds">30 Seconds</string>
    <string name="duration_labal_1_minute">1 Minute</string>
    <string name="duration_labal_three_minutes">3 Minutes</string>
    <string name="duration_labal_five_minutes">5 Minutes</string>
    <string name="duration_labal_ten_minutes">10 Minutes</string>
    <string name="duration_labal_thirty_minutes">30 Minutes</string>
    <string name="duration_labal_one_hour">1 Hour</string>
    <string name="duration_labal_infinite">Forever</string>
    <string name="setting_summary_flashlight">Turn on flashlight when alert goes off</string>
    <string name="setting_summary_vibrate">Phone vibrates when alert goes off</string>
    <string name="about_this_app">About this app</string>
    <string name="test_alert">Test Alert</string>
    <string name="stop">Stop!</string>
</resources>
