<?xml version="1.0" encoding="utf-8"?>

<com.dgsd.android.wearsmyphone.view.MainActivityView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_view"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:fillViewport="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/hero_element_height"
            android:paddingLeft="@dimen/hero_element_padding_left"
            android:paddingRight="@dimen/default_padding"
            android:paddingTop="@dimen/default_padding"
            android:paddingBottom="@dimen/default_padding"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:background="@color/primary">

            <TextView
                android:id="@+id/page_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textColor="@android:color/white"
                android:text="@string/default_page_title"
                tools:text="Daniel's Gear Live"/>

            <TextView
                android:id="@+id/page_subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textColor="@android:color/white"
                android:text="@string/default_page_subtitle"
                tools:text="Connected"/>

        </LinearLayout>

        <com.dgsd.android.wearsmyphone.view.SettingItemView
            android:id="@+id/ringtone"
            app:primary="@string/setting_title_ringtone"
            app:secondary="This is the secondary"
            app:settingIcon="@drawable/ic_launcher"
            style="@style/SettingItemView"/>

        <com.dgsd.android.wearsmyphone.view.SettingItemView
            android:id="@+id/duration"
            app:primary="@string/setting_title_duration"
            app:settingIcon="@drawable/ic_launcher"
            style="@style/SettingItemView"/>

        <com.dgsd.android.wearsmyphone.view.SettingItemView
            android:id="@+id/vibrate"
            app:primary="@string/setting_title_vibrate"
            app:secondary="@string/setting_summary_vibrate"
            app:settingIcon="@drawable/ic_launcher"
            app:showSwitch="true"
            style="@style/SettingItemView"/>

        <com.dgsd.android.wearsmyphone.view.SettingItemView
            android:id="@+id/flashlight"
            app:primary="@string/setting_title_flashlight"
            app:secondary="@string/setting_summary_flashlight"
            app:settingIcon="@drawable/ic_launcher"
            app:showSwitch="true"
            style="@style/SettingItemView"/>


    </LinearLayout>
</com.dgsd.android.wearsmyphone.view.MainActivityView>